# Caldera

./: .gitignore  CALDERA_CONTEXT.md  NXM_SETUP.md  README.md
.github/workflows/: release.yml
backend/: Cargo.toml  tauri.conf.json
backend/capabilities/: default.json
backend/defaults/: settings.brk
backend/icons/: icon.icns
backend/src/: config.rs  download.rs  lib.rs  library.rs  main.rs  nxm.rs  packer.rs  profile_format.rs  profile_runtime.rs  runtime.rs  steam.rs
backend/src/deployer/: mod.rs  unreal.rs
backend/src/downloadmanagers/: mod.rs  nexus_catcher.rs
backend/src/filehandler/: mod.rs  packer.rs  parser.rs  runtime.rs  runtime_reader.rs
backend/src/operations/: mod.rs  uncompress.rs
backend/src/scans/: steam.rs
browser extension/: background.js  build.sh  content.js  dev.js  manifest.chrome.json  manifest.firefox.json  manifest.json
browser extension/firefox/: background.js  content.js
defaults/deployers/: unreal_engine.toml
frontend/: index.html  package-lock.json  package.json
frontend/public/settings/: caldera.brk
frontend/public/themes/: rebellion.css
frontend/src/: App.svelte  main.js  tokens.css
frontend/src/components/: BaseListItem.svelte  Button.svelte  CollectionsTab.svelte  (+17 more)
scripts/: check-icons.ps1  check-icons.sh
ui_kit/: demo.html
ui_kit/base/: reset.css  tokens.css
ui_kit/buttons/: buttons.css  buttons.js
ui_kit/inputs/: inputs.css  inputs.js
ui_kit/lists/: lists.css  lists.js
ui_kit/popups/: popups.css  popups.js
ui_kit/settings/: demo-settings.brk  demo-settings.html  settings.css  settings.js
(+11 files in other folders)
