[package]
name = "caldera-backend"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
time = { version = "0.3", features = ["formatting"] }
zip = "2"
axum = "0.7"
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["net"] }
