[package]
name = "caldera-backend"
version = "0.2.0"
edition = "2021"

[lib]
name = "caldera_backend"
path = "src/library.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
toml = "0.8"
dirs = "5"
time = { version = "0.3", features = ["formatting"] }
zstd = "0.13"
zip = "2"
reqwest = { version = "0.13", features = ["json"] }
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
open = "5"
